{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 13,
  "lineage": "f5b782ca-8c09-d6ad-5347-7ef01276ec33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:internet-gateway/igw-07e986c60f2fed9c5",
            "id": "igw-07e986c60f2fed9c5",
            "owner_id": "058264260277",
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-igw"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-igw"
            },
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:route-table/rtb-0e5bc4e5db8229da0",
            "id": "rtb-0e5bc4e5db8229da0",
            "owner_id": "058264260277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-private-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:route-table/rtb-07ce7b7d3cf6d4698",
            "id": "rtb-07ce7b7d3cf6d4698",
            "owner_id": "058264260277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e986c60f2fed9c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-public-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b2f6663a6ab5fc",
            "route_table_id": "rtb-0e5bc4e5db8229da0",
            "subnet_id": "subnet-01f7aa634b461c077"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088ab0771bf334ab7",
            "route_table_id": "rtb-0e5bc4e5db8229da0",
            "subnet_id": "subnet-0db30b8f2a8ff6f12"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0218053a771b34d1a",
            "route_table_id": "rtb-07ce7b7d3cf6d4698",
            "subnet_id": "subnet-0133f880c42d9b59b"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01def44cf27764ed4",
            "route_table_id": "rtb-07ce7b7d3cf6d4698",
            "subnet_id": "subnet-0102799ae2c33c5d5"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:subnet/subnet-01f7aa634b461c077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f7aa634b461c077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264260277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-private-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-private-subnet-1"
            },
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:subnet/subnet-0db30b8f2a8ff6f12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db30b8f2a8ff6f12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264260277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-private-subnet-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-private-subnet-2"
            },
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:subnet/subnet-0133f880c42d9b59b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133f880c42d9b59b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264260277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-public-subnet-1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-public-subnet-1"
            },
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:subnet/subnet-0102799ae2c33c5d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0102799ae2c33c5d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264260277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-public-subnet-2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-public-subnet-2"
            },
            "vpc_id": "vpc-0f7c6ec9a5ac46367"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:058264260277:vpc/vpc-0f7c6ec9a5ac46367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb579ddc3f00ffcd",
            "default_route_table_id": "rtb-0e240e8f84e6af572",
            "default_security_group_id": "sg-0d3b14d51de51b951",
            "dhcp_options_id": "dopt-028c07c008f36dca2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7c6ec9a5ac46367",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e240e8f84e6af572",
            "owner_id": "058264260277",
            "tags": {
              "Environment": "development",
              "Name": "ozzyject-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "ozzyject-vpc"
            }
          }
        }
      ]
    }
  ]
}